--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,7 @@
 <h3>Current list of users:</h3>
 <ul>
   <% @users.each do |user| %>
-    <li><%= user.first_name %> <%= user.last_name %> <%= user.admin ? "(admin)" : "" %></li>
+    <li><h3><%= user.full_name %> <%= user.admin ? "(admin)" : "" %></h3></li>
+    <p><%= user.email %></p>
   <% end %>
 </ul>
