Show only non future pairs for non admin users

--- a/app/views/pairs/index.html.erb
+++ b/app/views/pairs/index.html.erb
@@ -4,7 +4,9 @@
 <% if @pairs.any? %>
   <ul>
   <% for pair in @pairs %>
-    <li><%= pair.students.map{|student| student.full_name}.join(" <-> ") %></li>
+    <li>Day: <%= pair.date %> : 
+      <%= pair.students.map{|student| student.full_name}.join(" <-> ") %>
+    </li>
     <br>
   <% end %>
   </ul>
