--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -22,7 +22,7 @@
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= current_user.email %> <span class="caret"></span></a>
 
             <ul class="dropdown-menu">
-              <li><%= link_to "Show user pairs", user_pairs_path(current_user) %></li>
+              <li><%= link_to "Show Matches", user_pairs_path(current_user) %></li>
               <% if current_user.admin %>
                 <li><%= link_to "Show all users", users_path %></li>
               <% end %>
