--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -9,7 +9,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <%= link_to "Match it up", root_path, class: "navbar-brand" %>
+      <%= link_to "Match It Up", root_path, class: "navbar-brand" %>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-right">
@@ -19,16 +19,17 @@
           <li><%= link_to "Sign Up", new_user_registration_path %></li>
         <% else %>
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= current_user.email %> <span class="caret"></span></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= current_user.full_name %> <span class="caret"></span></a>
 
             <ul class="dropdown-menu">
               <li><%= link_to "Show Matches", user_pairs_path(current_user) %></li>
               <% if current_user.admin %>
-                <li><%= link_to "Show all users", users_path %></li>
-                <li><%= link_to "New match", new_user_pair_path(current_user) %></li>
+                <li><%= link_to "Show All Users", users_path %></li>
+                <li><%= link_to "New Match", new_user_pair_path(current_user) %></li>
               <% end %>
+              <li><%= link_to "Edit User Details", edit_user_registration_path %></li>
               <li role="separator" class="divider"></li>
-              <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
+              <li><%= link_to "Log Out", destroy_user_session_path, method: :delete %></li>
             </ul>
           </li>
         <% end %>
