--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,9 +1,22 @@
-
-<h3>Current list of users:</h3>
-<ul>
-  <% @users.each do |user| %>
-    <li><h3><%= user.full_name %> <%= user.admin ? "(admin)" : "" %></h3></li>
-    <p><%= user.email %></p>
-    <p>id: <%= user.id %></p>
-  <% end %>
-</ul>
+<div class="container">
+  <div class="row">
+    <h3>Current list of users:</h3>
+    <ul class="list-group">
+      <% @users.each do |user| %>
+        <li>
+          <div class="col-xs-6 font-weight-bold">
+            <%= user.full_name %>
+          </div>
+          <div class="col-xs-4">
+            <%= user.email %></p>
+          </div>
+          <div class="col-xs-2">
+            <button class="btn btn-xs btn-grey pull-right">
+              <%= user.admin %>
+            </button>
+          </div>
+        </li>
+      <% end %>
+    </ul>
+  </div>
+</div>
