--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,22 +1,29 @@
-<div class="container">
-  <div class="row">
-    <h3>Current list of users:</h3>
-    <ul class="list-group">
-      <% @users.each do |user| %>
-        <li>
-          <div class="col-xs-6 font-weight-bold">
-            <%= user.full_name %>
-          </div>
-          <div class="col-xs-4">
-            <%= user.email %></p>
-          </div>
-          <div class="col-xs-2">
-            <button class="btn btn-xs btn-grey pull-right">
-              <%= user.admin %>
-            </button>
-          </div>
-        </li>
-      <% end %>
-    </ul>
-  </div>
+<div class="row">
+  <h3>All users:</h3>
+  <ul class="list-unstyled">
+    <li>
+      <div class="col-xs-1 text-center">
+        Admin
+      </div>
+      <div class="col-xs-6 font-weight-bold">
+        Name
+      </div>
+      <div class="col-xs-5">
+        Email
+      </div>
+    </li>
+    <% @users.each do |user| %>
+      <li class="<%= user.admin? ? "admin" : "student" %>" data-id="<%= user.id %>">
+        <div class="col-xs-1 text-center">
+            <input name="user[<%= user.id %>]" id="user-<%= user.id %>" type="checkbox" value="1" <%= user.admin? ? 'checked="checked"' : '' %>>
+        </div>
+        <div class="col-xs-6 font-weight-bold">
+          <%= user.full_name %>
+        </div>
+        <div class="col-xs-5">
+          <%= user.email %></p>
+        </div>
+      </li>
+    <% end %>
+  </ul>
 </div>
