Add PairingPogress model and generate pairs saparation and function

--- a/app/views/pairs/new.html.erb
+++ b/app/views/pairs/new.html.erb
@@ -1,7 +1,10 @@
 <div class="container">
   <h3>Make a new Match!</h3>
 
-  <%= render "form", pair: @pair %>
+  <!-- <%#= render "form", pair: @pair %> -->
+
+  <!-- <%= button_to 'Generate pairs',  method: :generate_pairs %> -->
+
 
 
 
