--- a/app/views/pairs/index.html.erb
+++ b/app/views/pairs/index.html.erb
@@ -1,6 +1,9 @@
 <h4>Logged in as: <%= current_user.full_name %> <%= current_user.admin ? "(Admin)" : "(Student)" %></h4>
 <h3>These are <%= current_user.admin ? "all the" : "your" %> current matches.</h3>
-
+<br>
+<%= button_to "generate pairs", pairs_generate_pairs_path %>
+<%= button_to "destroy all pairs", pairs_delete_all_pairs_path, method: :delete %>
+<br>
 <% if @pairs.any? %>
   <ul>
   <% for pair in @pairs %>
