--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,25 +2,30 @@
   <h3>All users:</h3>
   <ul class="list-unstyled">
     <li>
-      <div class="col-xs-1 text-center">
+      <div class="col-xs-3 text-center">
         Admin
       </div>
-      <div class="col-xs-6 font-weight-bold">
+      <div class="col-xs-5 font-weight-bold">
         Name
       </div>
-      <div class="col-xs-5">
+      <div class="col-xs-4">
         Email
       </div>
     </li>
     <% @users.each do |user| %>
       <li class="<%= user.admin? ? "admin" : "student" %>" data-id="<%= user.id %>">
-        <div class="col-xs-1 text-center">
-            <input name="user[<%= user.id %>]" id="user-<%= user.id %>" type="checkbox" value="1" <%= user.admin? ? 'checked="checked"' : '' %>>
+        <div class="col-xs-3 text-center">
+          <button class="btn-grey submit" type="submit">
+            <span id="user-<%= user.id %>">
+              <%= link_to (user.admin ? "remove admin" : "make admin"),
+              user_toggle_admin_path(user.id), method: :post, params: { id: user.id } %>
+            </span>
+          </button>
         </div>
-        <div class="col-xs-6 font-weight-bold">
+        <div class="col-xs-5 font-weight-bold">
           <%= user.full_name %>
         </div>
-        <div class="col-xs-5">
+        <div class="col-xs-4">
           <%= user.email %></p>
         </div>
       </li>
