--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,6 @@
-<h3>Welcome to match it up!!</h3>
+
+<% if user_signed_in? %>
+  <h3>Welcome to Match It Up, <%= current_user.full_name %></h3>
+<% else %>
+  <h3>Welcome to match it up!!</h3>
+<% end %>
