Create form with date field for delete pairs

--- a/app/views/pairs/index.html.erb
+++ b/app/views/pairs/index.html.erb
@@ -4,7 +4,8 @@
 
 <%= render "generate-pairs-form", pair: @pair %>
 <!-- <%= button_to "generate pairs", pairs_generate_pairs_path %> -->
-<%= button_to "destroy all pairs", pairs_delete_all_pairs_path, method: :delete %>
+<%= render "delete-pairs-form", pair: @pair %>
+<!-- <%= button_to "destroy all pairs", pairs_delete_all_pairs_path, method: :delete %> -->
 <br>
 
 <% if @pairs.any? %>
