--- a/app/views/pairs/_delete-pairs-form.html.erb
+++ b/app/views/pairs/_delete-pairs-form.html.erb
@@ -1,11 +1,11 @@
-<%= form_for(:date, :url => pairs_generate_pairs_path, params: { date: :date }, method: :post) do |f| %>
+<%= form_for(:date, :url => pairs_delete_all_pairs_path, params: { date: :date}, method: :delete) do |f| %>
   <%= render 'shared/validation_errors' %>
   <div class="row">
     <div class="col-xs-2 form-group">
       <%= f.date_select :date, class: "form-control"%>
     </div>
     <div class="form-group">
-      <%= f.submit "Create pairs", class: "btn btn-primary"%>
+      <%= f.submit "Delete pairs", class: "btn btn-primary"%>
     </div>
   </div>
 <% end %>
