--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -12,7 +12,9 @@
       <%= link_to "Match It Up", root_path, class: "navbar-brand" %>
       <div class="navbar-header navbar-text">
       <% if user_signed_in? && !current_user.admin %>
-        <p><%= current_user.pairs.last.date %> : <%= current_user.pairs.last.pretty_print %></p>
+        <% if current_user.pairs.any? %>
+          <p><%= current_user.pairs.last.date %> : <%= current_user.pairs.last.pretty_print %></p>
+        <% end %>
       <% end %>
       </div>
     </div>
