--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,34 +1,31 @@
 <div class="row">
-  <h3>All users:</h3>
-  <ul class="list-unstyled">
-    <li>
-      <div class="col-xs-3 text-center">
-        Admin
-      </div>
-      <div class="col-xs-5 font-weight-bold">
-        Name
-      </div>
-      <div class="col-xs-4">
-        Email
-      </div>
-    </li>
-    <% @users.each do |user| %>
-      <li class="<%= user.admin? ? "admin" : "student" %>" data-id="<%= user.id %>">
-        <div class="col-xs-3 text-center">
-          <button class="btn-grey submit" type="submit">
-            <span id="user-<%= user.id %>">
-              <%= link_to (user.admin ? "remove admin" : "make admin"),
-              user_toggle_admin_path(user.id), method: :post, params: { id: user.id } %>
-            </span>
-          </button>
-        </div>
-        <div class="col-xs-5 font-weight-bold">
-          <%= user.full_name %>
-        </div>
-        <div class="col-xs-4">
-          <%= user.email %></p>
-        </div>
-      </li>
-    <% end %>
-  </ul>
+  <% roles = @users.order(admin: :desc).group_by { |user| user.admin } %>
+  <% roles.each do |admin, users| %>
+    <div class="col-xs-6">
+      <table class="table">
+        <thead>
+          <tr class="active">
+            <th colspan="2">
+              <%= admin ? "admins" : "students" %>
+            </th>
+          </tr>
+        </thead>
+        <% users.each do |user| %>
+          <tr class="<%= user.admin? ? "admin" : "student" %> " data-id="<%= user.id %>">
+            <td >
+              <button class="btn-grey submit" type="submit">
+                <span id="user-<%= user.id %>">
+                  <%= link_to (user.admin ? "remove admin" : "make admin"),
+                  user_toggle_admin_path(user.id), method: :post, params: { id: user.id } %>
+                </span>
+              </button>
+            </td>
+            <td class="col-xs-8 font-weight-bold">
+              <%= user.full_name %>
+            </td>
+          </tr>
+        <% end %>
+      </table>
+    </div>
+  <% end %>
 </div>
