--- a/app/views/pairs/_delete-pairs-form.html.erb
+++ b/app/views/pairs/_delete-pairs-form.html.erb
@@ -9,7 +9,7 @@
       <%= f.date_select :date, class: "form-control"%>
     </div>
     <div class="form-group">
-      <%= f.submit "Delete pairs",id: "delete-button", class: "btn btn-primary"%>
+      <%= f.submit "Delete pairs",id: "delete-button", class: "btn btn-secondary"%>
     </div>
   </div>
 <% end %>
